updates meta data description and author

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
    <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <meta name="description" content=" FILL ME IN ">
-      <meta name="author" content=" FILL ME IN ">
+      <meta name="description" content=" Taylor Nodell's Front End Web Development Portfolio ">
+      <meta name="author" content=" Taylor Nodell ">
       <title>Taylor Nodell: Portfolio</title>
       <!-- <CSS>-->
       <link href="css/print.css" rel="stylesheet" media=print Cache-Control: max-age=3600,>
